dataset1235/2025-2/610742602/users/852229192/executions/677928262_775838323.log
== SUBMISSION (2025-08-28 17:51:49)
-- CODE: 
x1 = 4.0
print (x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 17:51:10)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3
m = n1 + n2 + n3/3
pint (m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    pint (m)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    pint (m)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 17:51:08)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3
m = n1 + n2 + n3/3
pint (m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    pint (m)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    pint (m)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
